--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,2 +1,6 @@
-<h1>StaticPages#home</h1>
-<p>Find me in app/views/static_pages/home.html.erb</p>
+<% provide(:title, "Home") %>
+<h1>Static Home Page</h1>
+<p>This will become the static landing page</p>
+<p>Lots of 'pretty' will be required; preferably some video or other cool stuff</p>
+<iframe width='100%' src="https://www.cornerstoneondemand.com/">
+
