--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,3 +1,5 @@
 <% provide(:title, "Help") %>
 <h1>StaticPages#help</h1>
-<p>Find me in app/views/static_pages/help.html.erb</p>
+<p>Access to 24x7 help?</p>
+<p>FAQ?</p>
+<p>And probably some other stuff....</p>
