--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,6 +1,19 @@
 <% provide(:title, "Home") %>
-<h1>Static Home Page</h1>
+
+<div class="center jumbotron">
+  <h1>Welcome to the Liberty Homework Helper</h1>
+
+  <h2>
+    This is the home page for the Liberty Homework Helper project
+    </h2>
+
+  <%= link_to "Sign up now!", '#', class: "btn btn-lg btn-primary" %>
+</div>
+
 <p>This will become the static landing page</p>
 <p>Lots of 'pretty' will be required; preferably some video or other cool stuff</p>
-<iframe width='100%' src="https://www.cornerstoneondemand.com/">
+
+<div class='powered-by'>Powered by:<br> <%= link_to image_tag("rails.png", alt: "Rails logo"),
+            'http://rubyonrails.org/' %> </div>
+
 
